<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
        style="@style/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yardage"
        android:layout_marginTop="30dp"/>
    <EditText
        style="@style/edittext_layout"
        android:id="@+id/entered_yardage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/yardage_hint"/>
    <TextView
        style="@style/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elevation"
        android:layout_margin="5dp"/>
    <EditText
        style="@style/edittext_layout"
        android:id="@+id/entered_elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/elevation_hint"/>
    <TextView
        style="@style/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:layout_margin="5dp"/>
    <EditText
        style="@style/edittext_layout"
        android:id="@+id/wind_speed_entered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/wind_hint"/>
    <TextView
        style="@style/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_direction"
        android:layout_margin="5dp"/>
    <Spinner
        android:layout_margin="5dp"
        android:id="@+id/wind_direction_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/wind_selection"
        android:prompt="@string/wind_direction_prompt"
        android:gravity="center"
        android:layout_gravity="center"
        android:spinnerMode="dropdown">
    </Spinner>
    <TextView
        style="@style/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lie"
        android:layout_margin="5dp"/>
    <EditText
        style="@style/edittext_layout"
        android:id="@+id/entered_lie_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lie_hint"/>
    <Button
        android:id="@+id/get_club_button"
        android:background="@color/heading_text"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:text="@string/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>